--- a/node_api/package.json
+++ b/node_api/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.18.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.1.26",
     "mongoose": "^6.12.6",
     "mysql2": "^3.9.2",
     "nodemon": "^2.0.22",
