website module in nodejs backend

--- a/node_api/package.json
+++ b/node_api/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@curiouser/transformers": "^1.1.8",
     "@huggingface/inference": "^2.6.4",
+    "@langchain/community": "^0.0.41",
+    "@langchain/openai": "^0.0.23",
     "@qdrant/js-client-rest": "^1.7.0",
     "@qdrant/qdrant-js": "^1.7.0",
     "@types/bcrypt": "^5.0.2",
@@ -25,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crawlee": "^3.9.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
