--- a/node_api/package.json
+++ b/node_api/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@curiouser/transformers": "^1.1.8",
-    "@huggingface/inference": "^2.6.4",
-    "@langchain/community": "^0.0.41",
+    "@curiouser/transformers": "^1.1.9",
+    "@huggingface/inference": "^2.8.1",
+    "@langchain/community": "^0.3.17",
     "@langchain/openai": "^0.0.23",
-    "@qdrant/js-client-rest": "^1.7.0",
+    "@qdrant/js-client-rest": "^1.12.0",
     "@qdrant/qdrant-js": "^1.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
@@ -37,11 +37,12 @@
     "mongoose": "^6.12.6",
     "mysql2": "^3.9.2",
     "nodemon": "^2.0.22",
-    "ollama": "^0.4.9",
+    "ollama": "^0.5.10",
     "pbkdf2-password": "^1.2.1",
     "pdf-extraction": "^1.0.2",
     "pdf.js-extract": "^0.2.1",
     "swagger-jsdoc": "^6.2.8",
+    "playwright": "^1.43.1",
     "swagger-ui-express": "^5.0.0",
     "temp": "^0.9.4",
     "temp-file": "^3.4.0",
